# practical-data-scientist-lecture

./: .gitignore  README.md
2025/03-experiment-management/sample-codes/: README.md
2025/03-experiment-management/sample-codes/exp001/: level_2.py  level_3.py  level_4.py  level_5.py  level_5_exp.py  level_6_lib.py
2025/03-experiment-management/sample-codes/exp002/: exp002.py  pyproject.toml
2025/04-software-engineering/exercises/: exercise_2_2_test.py  exercise_2_3_test.py
2025/04-software-engineering/sample-codes/: black_before.py  flake8_sample.py  isort_after.py  isort_before.py  mypy_error_sample.py  strict_mypy_error_sample.py  type_hint_sample.py
2025/04-software-engineering/sample-codes/mypackage/tests/: test_fixture.py  test_mathutils_parametrize.py
2025/08-experiment-management/exercises/: level_0.py
2025/08-experiment-management/sample-codes/exp001/: README.md  eda_wine-quality.ipynb  level_1.py  level_6.py  level_6_exp.py  summarize_results.py
2025/08-experiment-management/sample-codes/exp001/data/: results_summary_mlp.csv
2025/08-experiment-management/sample-codes/exp002/: README.md  summarize_results.py  svr_exp.py
2025/09-software-engineering/exercises/: exercise_1_2.py  exercise_1_3.py  exercise_2_1_test.py
2025/09-software-engineering/sample-codes/: black_after.py  pyproject.toml  test_sample.py
2025/09-software-engineering/sample-codes/hoge/: fuga.py
2025/09-software-engineering/sample-codes/mypackage/: pyproject.toml
2025/09-software-engineering/sample-codes/mypackage/mypackage/: mathutils.py
2025/09-software-engineering/sample-codes/mypackage/tests/: test_mathutils.py
(+1 files in other folders)
