[tool.poetry]
name = "exp001"
version = "0.1.0"
description = ""
authors = ["Hidetoshi Kawaguchi <Hidetoshi.Kawaguchi@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
scikit-learn = "^1.7.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
