[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = ""
authors = ["Hidetoshi Kawaguchi <Hidetoshi.Kawaguchi@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
